# srtedit

./: LICENSE  README.md  pyproject.toml
srtedit/: __main__.py  cli.py  subtitle.py
