[tool.poetry]
name = "srtedit"
version = "0.1.0"
description = ""
authors = ["viown <48097677+viown@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
srtedit = "srtedit.cli:srtedit"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
srt = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
